feat(ui): update app title in document metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CashCaddy - Track, Save, Thrive with CashCaddy</title>
+    <title>Track, Save, Thrive with CashCaddy</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
